maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:24: error: value Nord is not a member of object plm.universe.Direction
  while(getDirection()!=Direction.Nord){
                                  ^